--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon ./dist/index.js",
-    "lint": "eslint 'src/**/*.{js,ts,tsx} --fix"
+    "lint": "eslint 'src/**/*.{js,ts,tsx} --fix",
+    "format": "prettier --write ./src/*"
   },
   "author": "Jose-cd",
   "repository": {
@@ -35,7 +36,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
+    "prettier": "2.3.2",
     "prettier-eslint": "^12.0.0",
     "typescript": "^4.2.4"
   }
