--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "dev": "nodemon ./dist/index.js",
-    "lint": "eslint 'src/**/*.{js,ts,tsx} --fix",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "format": "prettier --write ./src/*"
   },
   "author": "Jose-cd",
@@ -34,14 +34,13 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.7",
     "prettier": "2.3.2",
     "prettier-eslint": "^12.0.0",
     "typescript": "^4.2.4"
   },
-
   "peerDependencies": {
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
