--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Build package
         run: npm run build
 
