--- a/demo/package.json
+++ b/demo/package.json
@@ -10,9 +10,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-google-drive-picker": "file:..",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
